--- a/dreamegg/soccer/soccer.html
+++ b/dreamegg/soccer/soccer.html
@@ -6,9 +6,12 @@
     </head>
     <body>
         <button id="btn1" onclick="start()">start</button>
-        <img src="keeper.png" id="keeper">
+        <!--<img src="keeper.png" id="keeper">-->
+        <img src="goal.png"alt="ゴール"id="goal">
+        <img src="ball.png"alt="ボール"id="ball">
+        <img src="denmaru2.png" alt="でんまるくん" id="denmaru">
 
-        <div>
+        <div class="direction">
             <img src="left.png" class="arrow" id="arrowleft" onclick="player(this.id)">
             <img src="right.png" class="arrow" id="arrowright" onclick="player(this.id)">
         </div>
