--- a/dreamegg/soccer/soccer.html
+++ b/dreamegg/soccer/soccer.html
@@ -7,13 +7,14 @@
     <body>
         <button id="btn1" onclick="start()">start</button>
         <!--<img src="keeper.png" id="keeper">-->
+        <img src="denmaru2.png" alt="でんまるくん" id="denmaru">
         <img src="goal.png"alt="ゴール"id="goal">
         <img src="ball.png"alt="ボール"id="ball">
-        <img src="denmaru2.png" alt="でんまるくん" id="denmaru">
+        <img src="" alt="" id="keeper">
 
         <div class="direction">
-            <img src="left.png" class="arrow" id="arrowleft" onclick="player(this.id)">
-            <img src="right.png" class="arrow" id="arrowright" onclick="player(this.id)">
+            <img src="left.png" class="arrow" id="arrowleft" onclick="aimBall(this.id)">
+            <img src="right.png" class="arrow" id="arrowright" onclick="aimBall(this.id)">
         </div>
         
         <script src="soccer.js"></script>
