--- a/dreamegg/main/index.html
+++ b/dreamegg/main/index.html
@@ -6,13 +6,14 @@
     </head>
     <body>
         <button id="btn1" onclick="start()">start</button>
-        <button id="btn2" onclick="stop()">stop</button>
+        <button id="btn2" onclick="window.open('/soccer/soccer.html','_blank')">soccer</button>
         <div id="room">
             <img id="image">
         </div>
         <h1 id="time">0d 0h 0m 0s</h1>
         <img src="img/rice.png" onclick="experience()" class="takecare" id="food">
         <img src="img/ball.png" onclick="experience()" class="takecare" id="play">
+        <img src="img/tabako.png" onclick="darkexperience()" class="takecare" id="tabako">
         <div>
             <p>経験値</p>
             <p id="exp">0</p>
