--- a/dreamegg/soccer/soccer.html
+++ b/dreamegg/soccer/soccer.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <button id="btn1" onclick="start()">start</button>
+        <button id="btn2" onclick="window.open('/main/index.html','_blank')">main</button>
         <!--<img src="keeper.png" id="keeper">-->
         <img src="img/denmaru2.png" alt="でんまるくん" id="denmaru">
         <img src="img/goal.png"alt="ゴール"id="goal">
